# fear-of-sql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/flashcards/: flashcards.py  flashcards_legacy.py  pyproject.toml
src/fear_of_sql/: __init__.py  _async_client.py  _compat.py  _connect.py  _dbapi.py  _describe.py  _errors.py  _executor.py  _explain.py  _psycopg_executor.py  _query.py  _render.py  _resolve.py  _sync_client.py  _types.py  _validate.py
tests/: conftest.py  setup.sql  test_fear_of_sql.py  test_future_annotations.py  test_tstrings.py
